# SQR-Project

./: .coverage  .gitignore  Readme.md  pyproject.toml  pytest.ini
.github/workflows/: main.yaml
backend/: app.db  auth.py  config.py  database.py  database_actions.py  database_populate.py  db.py  db_actions.py  db_populate.py  foodish.py  main.py  models.py  schemas.py  script.py  security.py  service.py  services.py  test_methods.py
backend/database/: database.py  db.py  db_actions.py  db_populate.py  models.py  schemas.py
backend/models/: food.py  item.py  template.py  tierlist.py  user.py
backend/routers/: auth.py  service.py
frontend/: APIs.py  app.py  cookies.py  menu.py
frontend/pages/: account.py  auth.py  my-tiers.py  template-tiers.py  tier-list.py  tier-lists.py  tier.py
frontend/pages/modules/: APIs.py  menu.py
frontend/pages/modules/cookies/: cookies.py
frontend/tests/: test_app.py  test_auth.py
tests/: TestProject.py
tests/e2e/: test_methods.py
tests/locust/: test_locust.py
tests/unit/: test_app.py  test_auth.py  test_config.py  test_db.py  test_db_actions.py  test_menu.py  test_schemas.py  test_security.py
